--- a/workspace/boot001/src/main/resources/templates/board/write.html
+++ b/workspace/boot001/src/main/resources/templates/board/write.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
- 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  	  layout:decorate="~{fragments/layout}">
-<!--    #1. layout 렌더링    -->
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{fragments/layout}">
+<!-- 	#1. layout 렌더링	 -->
 <head lang="ko">
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-   <div layout:fragment="content">
+	<div layout:fragment="content">
       <h3 class="card-header"> MBTI 글쓰기</h3>
-	  <form th:action="@{/board/write}"  method="post" enctype="multipart/form-data"> 
+	  <form th:action="@{/board/write}"  method="post"  enctype="multipart/form-data"> 
 	     <!--  <input type="hidden"   name="app_user_id"  value="">  -->
-		  <div class="mb-3">
-		    <label for="bname" class="form-label">WRITER:</label>
-		    <input type="text" class="form-control" id="bname" placeholder="작성자를 입력해주세요" name="appUserId">
+	      <div class="mb-3">
+		    <label for="appUserId" class="form-label">WRITER:</label>
+		    <input type="text" class="form-control" id="appUserId"  name="appUserId">
 		  </div>
 		  <div class="mb-3 mt-3">
 		    <label for="btitle" class="form-label">TITLE:</label>
-		    <input type="text" class="form-control" id="btitle" placeholder="내용을 입력해주세요" name="btitle">
+		    <input type="text" class="form-control" id="btitle" 
+		    	placeholder="내용을 입력해주세요" name="btitle">
 		  </div>
 		  <div class="mb-3">
 		    <label for="bpass" class="form-label">PASS:</label>
@@ -26,19 +27,18 @@
 		  </div>
 		  <div class="mb-3">
 		    <label for="bcontent" class="form-label">CONTENT:</label>
-		    <textarea class="form-control" id="bcontent" placeholder="내용을 입력해주세요" name="bcontent"></textarea>
-		  </div>
+		    <textarea class="form-control" id="bcontent" placeholder="내용을 입력해주세요" 
+		    	name="bcontent"></textarea>
+		  </div> 
 		  <div class="mb-3">
 		    <label for="file" class="form-label">FILE:</label>
-		    <input type="file" class="form-control" id="file" placeholder="파일를 입력해주세요" name="file">
-		  </div> 
+		    <input type="file" class="form-control" id="file" placeholder="비밀번호를 입력해주세요" name="file">
+		  </div>
 		  <div class="mb-3  text-end">
 		  	<button type="submit" class="btn btn-primary">글쓰기</button>  
 		  	<a th:href="@{/board/list}"  class="btn btn-primary">목록보기</a>
 		  </div>
 	 </form> 
-   </div>
-   <!--    #2. layout:fragment="content"    -->
-   <!-- http://localhost:8484/boot001/board/list -->
+	</div>  
 </body>
 </html>
