--- a/workspace/boot001/src/main/resources/templates/users/delete.html
+++ b/workspace/boot001/src/main/resources/templates/users/delete.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorate="~{fragments/layout}">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	layout:decorate="~{fragments/layout}">
 <body>
-<div layout:fragment="content">
+	<div layout:fragment="content">
 
-    <h2 class="mb-4">회원 탈퇴</h2>
-
-    <!-- 로그인된 사용자만 --> 
-    <!-- 로컬 계정: 비밀번호 입력 후 탈퇴 --> 
-            <form  method="post"> 
-                <div class="mb-3">
-                    <label for="password" class="form-label">비밀번호 확인</label>
-                    <input type="password" id="password" name="password" class="form-control" required>
-                </div>
-                <button type="submit" class="btn btn-danger">탈퇴하기</button>
-            </form>
-        </div> 
-    </div>
-
-
-</div>
+		<h2 class="mb-4">회원 탈퇴</h2>
+		<!-- 알림메시지 -->
+		<div th:if="${successMessage}"
+			class="alert alert-info alert-dismissible fade show" role="alert">
+			<span th:text="${successMessage}"></span>
+			<button type="button" class="btn-close" data-bs-dismiss="alert"
+				aria-label="Close"></button>
+		</div>
+		<div th:if="${errorMessage}"
+			class="alert alert-info alert-dismissible fade show" role="alert">
+			<span th:text="${errorMessage}"></span>
+			<button type="button" class="btn-close" data-bs-dismiss="alert"
+				aria-label="Close"></button>
+		</div>
+		
+		<!-- 로그인된 사용자만 -->
+		<!-- 로컬 계정: 비밀번호 입력 후 탈퇴 -->
+		<div sec:authorize="isAuthenticated()">
+			<div th:if="${dto !=null and dto.provider == 'local'}">
+			<form th:action="@{/users/delete}" method="post">
+				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+				<input type="hidden" name="appUserId" th:value="${dto.appUserId}"/>
+				<input type="hidden" name="email" th:value="${dto.email}"/>
+				<input type="hidden" name="provider" th:value="${dto.provider}"/>
+				
+				<div class="mb-3">
+					<label for="password" class="form-label">비밀번호 확인</label> 
+					<input type="password" id="password" name="password" class="form-control" required>
+				</div>
+			<button type="submit" class="btn btn-danger">탈퇴하기</button>
+			</form>
+		</div>
+	</div>
+	
+		<!-- 익명 사용자 -->
+	<div sec:authorize="isAnonymous()">
+          <p class="alert alert-warning"> 로그인 후 사용가능한 페이지입니다.</p>
+          <a th:href="@{/users/login}"  class="btn btn-primary">로그인</a>
+       </div> 
+	</div>
 </body>
 </html>
