--- a/workspace/boot001/src/main/resources/templates/users/update.html
+++ b/workspace/boot001/src/main/resources/templates/users/update.html
@@ -21,7 +21,7 @@
 	<div sec:authorize="isAuthenticated()">
         <!-- 로컬 계정만 수정 가능 -->
             <div th:if="${dto !=null and dto.provider == 'local'}">
-            <form th:action="@{/user/update}" method="post" enctype="multipart/form-data"   class="needs-validation" novalidate>
+            <form th:action="@{/users/update}" method="post" enctype="multipart/form-data"   class="needs-validation" novalidate>
                 <!-- CSRF 토큰 --> 
 				<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <!-- 이메일/프로바이더 히든: 컨트롤러에서도 세팅하지만 폼에서도 함께 전달 --> 
