--- a/workspace/boot001/src/main/resources/templates/users/login.html
+++ b/workspace/boot001/src/main/resources/templates/users/login.html
@@ -38,22 +38,22 @@
     </div> 
  
    <div class="container my-5 text-center">
-      <div class="row">
-         <div class="col-sm-4">
-            <a>
-               <img src="/images/kakao.png" alt="kakao login">
-            </a>
-         </div>
-         <div class="col-sm-4">
-            <a>
-               <img src="/images/naver.png" alt="naver login">
-            </a>
-         </div>
-         <div class="col-sm-4">
-            <a>
-               <img src="/images/google.png" alt="google login">
-            </a>
-         </div>
+		<div class="row">
+			<div class="col-sm-4">
+				<a th:href="@{/oauth2/authorization/kakao}">
+					<img src="/images/kakao.png" alt="kakao login">
+				</a>
+			</div>
+			<div class="col-sm-4">
+				<a th:href="@{/oauth2/authorization/naver}">
+					<img src="/images/naver.png" alt="naver login">
+				</a>
+			</div>
+			<div class="col-sm-4">
+				<a  th:href="@{/oauth2/authorization/google}">
+					<img src="/images/google.png" alt="google login">
+				</a>
+			</div>
       </div>
    </div>
 </div> 
