--- a/workspace/boot001/src/main/resources/templates/fragments/layout.html
+++ b/workspace/boot001/src/main/resources/templates/fragments/layout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	<!-- cdnjs CDN --> 
+<script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
 <head lang="ko">
 <meta charset="UTF-8">
 <title>Insert title here</title>
